# Steadywin-RS485-CAN-Connector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: CAN_steadywin_protocol_v302.md  rs486_steadywin_protocol_v302.md  usage_manual.md
steadywin_connect/include/steadywin/: can_port_interface.h  gs_usb_can_port.h  serial_can_port.h  steadywin_motor.h  steadywin_protocol.h  steadywin_protocol_can.h  steadywin_protocol_rs485.h
steadywin_connect/include/steadywin/core/: motor_manager.h  steadywin_motor.h
steadywin_connect/include/steadywin/core/utils/: udp_control_server.h
steadywin_connect/include/steadywin/hal/: gs_usb_can_port.h  serial_can_port.h  serial_port_interface.h  windows_serial_port.h
steadywin_connect/include/steadywin/protocol/: steadywin_protocol.h  steadywin_protocol_can.h  steadywin_protocol_rs485.h
steadywin_connect/src/core/: motor_manager.cpp  steadywin_motor.cpp
steadywin_connect/src/hal/: gs_usb_can_port.cpp  serial_can_port.cpp  windows_serial_port.cpp
steadywin_connect/src/protocol/: steadywin_protocol.cpp  steadywin_protocol_can.cpp  steadywin_protocol_rs485.cpp
steadywin_connect/src/utils/: udp_control_server.cpp
tests/: can_debug_test.cpp  candlelight_test.cpp  winusb_bare_test.cpp
utils/: CAN_test.py
